[tool.poetry]
name = "abcr-fetcher"
version = "0.1.0"
description = ""
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "abcr_fetcher.py"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
