[tool.poetry]
name = "abcr-fetcher"
version = "0.1.0"
description = "Script to fetch Índie ABCR Excel file from ABCR website."
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "abcr_fetcher.py"}]

[tool.poetry.dependencies]
python = "*"
httpx = "*"
beautifulsoup4 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
